2006-01-06  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/bits/pthreadtypes.h (pthread_mutex_t):
	Don't give the union a name because it changes the mangled name.
	Instead name the struct for __data.
	* sysdeps/unix/sysv/linux/ia64/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/powerpc/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/s390/bits/pthreadtypes.h: Likewise.
	* sysdeps/unix/sysv/linux/x86_64/bits/pthreadtypes.h: Likewise.
	* pthread_create.c (start_thread): Adjust robust mutex free loop.
	* descr.h (ENQUEUE_MUTEX, DEQUEUE_MUTEX): Adjust.

2006-01-05  Ulrich Drepper  <drepper@redhat.com>

	* sysdeps/unix/sysv/linux/i386/lowlevellock.h (lll_futex_wait):
	Return status.
	(lll_futex_timed_wait): Define.
	* sysdeps/unix/sysv/linux/x86_64/lowlevellock.h: Likewise.
	* sysdeps/pthread/aio_misc.h: New file.

2006-01-03  Joseph S. Myers  <joseph@codesourcery.com>

	* Makefile ($(objpfx)$(multidir)): Use mkdir -p.

2006-01-03  Steven Munroe  <sjmunroe@us.ibm.com>

	* sysdeps/unix/sysv/linux/powerpc/powerpc32/sysdep-cancel.h
	(PSEUDO): Remove redundant cfi_startproc and cfi_endproc directives.
	* sysdeps/unix/sysv/linux/powerpc/powerpc64/sysdep-cancel.h: Likewise.

2006-01-04  Ulrich Drepper  <drepper@redhat.com>

	* tst-cancel24.cc: Use C headers instead of C++ headers.

2006-01-03  Jakub Jelinek  <jakub@redhat.com>

	* sysdeps/unix/sysv/linux/sparc/lowlevellock.h: Remove #error for
	sparc-linux configured glibc.
	(lll_futex_wake_unlock): Define to 1 for sparc-linux configured glibc.
	(__lll_mutex_trylock, __lll_mutex_cond_trylock, __lll_mutex_lock,
	__lll_mutex_cond_lock, __lll_mutex_timedlock): Use
	atomic_compare_and_exchange_val_24_acq instead of
	atomic_compare_and_exchange_val_acq.
	(lll_mutex_unlock, lll_mutex_unlock_force): Use atomic_exchange_24_rel
	instead of atomic_exchange_rel.
	* sysdeps/unix/sysv/linux/sparc/sparc32/lowlevellock.c: New file.