@@ -4,4 +4,4 @@
 PID			offsetof (struct pthread, pid) - TLS_PRE_TCB_SIZE
 TID			offsetof (struct pthread, tid) - TLS_PRE_TCB_SIZE
 MULTIPLE_THREADS_OFFSET offsetof (struct pthread, header.multiple_threads) - TLS_PRE_TCB_SIZE
-SYSINFO_OFFSET		offsetof (tcbhead_t, private)
+SYSINFO_OFFSET		offsetof (tcbhead_t, __private)
