@@ -1,5 +1,9 @@
 2006-01-06  Ulrich Drepper  <drepper@redhat.com>
 
+	* sysdeps/ia64/tls.h (tcbhead_t): Rename private membe to __private.
+	* sysdeps/ia64/tcb-offsets.sym: Adjust for private->__private
+	rename in tcbhead_t.
+
 	* sysdeps/unix/sysv/linux/i386/bits/pthreadtypes.h (pthread_mutex_t):
 	Don't give the union a name because it changes the mangled name.
 	Instead name the struct for __data.
